# niclasProject

./: setup.cfg
pyProject/: pyProject.py
src/niclasProject/: niclasProject.py
tests/: greet_test.py
