


[metadata]
name = pyProject
version = 0.0.1
author = Niclas Søgaard Hjortkjær
author_email = hjortkjaer.niclas@gmail.com
description = A package to convert your Jupyter Notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NiclasHjortkjaer/pyProject/
licence = GNU
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages=find_packages()
install_requires =
    ipython>=6
    nbformat>=4
    nbconvert>=5
    requests>=2